# amp-mate-rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs  polybar.rs
src/controller/: mod.rs
src/controller/protocol/: constants.rs  mod.rs
src/controller/rotel/: mod.rs
src/controller/rotel/protocol/: constants.rs  mod.rs  patterns.rs
