[package]
name = "amp_mate"
version = "0.1.0"
authors = ["vvasi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
chrono = "0.4"
clap = "^3.0.0-beta.2"
color-eyre = { version = "0.5", default-features = false }
fern = "0.6"
log = "0.4"
tokio = { version = "1.2", features = ["io-util", "macros", "net", "parking_lot", "rt-multi-thread", "signal", "sync"] }
tokio-stream = "0.1.3"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3